v0.9.4 -- xx yyy 2007
---------------------
- ChatStateHandler: make sure to never send the same chat state twice in a row
- Tag: make ctors explicit


v0.9.3 -- 18 Jul 2007
---------------------
- SOCKS5BytestreamManager: include error child in IQ of type error
- allow a default value to be set for data form fields of type FieldTypeListSingle (thanks to Roelof Naude)
- DelayedDelivery: fixed SE type
- Registration: fixed error handling
- Parser: disallow ", ' and > again for full XMPP compliance
- XPath: accept @ in string literals


v0.9.2 -- 23 Jun 2007
---------------------
- Parser: accept ' and > in attribute values and cdata
- Parser: log parse errors
- SIManager, SIProfileFT: return requested stream's id (SID)
- SIProfileFTHandler: new argument: stream's ID (SID)


v0.9.1 -- 20 Jun 2007
---------------------
- MessageSession: fix potential crash when ClientBase deletes MessageSessions in its dtor
- DNS: increase verbosity if no SRV record found
- ClientBase: avoid double call of onDisconnect() under rare circumstances
- ClientBase: reply with 'service-unavailable' to unhandled IQs
- documentation updates and fixes
- ClientBase: avoid disconnect loop if TLS failed
- Client: added Session Creation event


v0.9 -- 17 Jun 2007
-------------------
- rewrote XML parser (no dependency on iksemel anymore)
- XEP-0045 (Multi-User Chat)
- XEP-0065 (SOCKS5 Bytestreams)
- XEP-0095 (Stream Initiation)
- XEP-0096 (File Transfer)
- added StanzaExtensions
  - XEP-0027 (Current Jabber OpenPGP Usage) abstraction
  - XEP-0066 (Out of Band Data) abstraction
  - XEP-0091 (Delayed Delivery) abstraction
  - XEP-0153 (vCard-Based Avatars) abstraction
  - XEP-0203 (Delayed Delivery) abstraction
- added msec timeout to recv()
- Client: fetch roster immediately after requesting roster:delimiter
- delete() --> delete
- Registration: allow registration with services
- implement dataforms as list of pointers to DataformFields
- ClientBase: cleaner Stanza deleting