@@ -105,6 +105,16 @@ namespace gloox
     {
       m_streamFeatures = getStreamFeatures( stanza );
 
+      if( m_tls == TLSRequired
+          && ( !m_encryption || !( m_streamFeatures & StreamFeatureStartTls ) ) )
+      {
+        logInstance().log( LogLevelError, LogAreaClassClient,
+                    "Client is configured to require TLS but either the server didn't offer TLS or "
+                    "TLS support is not compiled in." );
+        disconnect( ConnTlsNotAvailable );
+        return true;
+      }
+
       if( m_tls && m_encryption && !m_encryptionActive
           && ( m_streamFeatures & StreamFeatureStartTls ) )
       {
