@@ -2,6 +2,7 @@ v0.9.4 -- xx yyy 2007
 ---------------------
 - ChatStateHandler: make sure to never send the same chat state twice in a row
 - Tag: make ctors explicit
+- ClientBase: setTls( bool ) --> setTls( TLSPolicy )
 
 
 v0.9.3 -- 18 Jul 2007
